# laud

./: .gitignore  CMakeLists.txt  Makefile  laud.h  laud_nn.h  main.cpp
c/: .clangd  CMakeLists.txt  Const.c  Const.h  Operator.c  Operator.h  Operator.r.h  Placeholder.c  Placeholder.h  Placeholder.r.h  Shuffle.c  Slice.c  Slice.r.h  SliceGenerator.c  Var.c  Var.h  Var.r.h  headers.cmake  laud.c  sources.cmake
c/core/: base.c  base.h  base.r.h  d_narray.c  d_narray.r.h  narray.c  narray.h  narray.r.h  narray.r.static.h  narray_bc.c  narray_bc.r.h  narray_bc.r.static.h  node.c  node.h  node.r.h  node.r.static.h  var.c  var.h  var.r.h  var.r.static.h
c/ds/: HashMap.c  HashMap.h  Queue.c  Queue.h  Stack.c  Stack.h
c/math/: add.c  add.r.h  matrix_dot.c  matrix_dot.r.h  nn_activations.c  nn_activations.h  relu.c  relu.r.h  sigmoid.c  sigmoid.r.h
c/math/common/add/: add.c  add.h  add.r.h  add.x.narray.h  add.x.var.h  add.xtern.h
c/math/common/matrix_dot/: matrix_dot.c  matrix_dot.h  matrix_dot.r.h  matrix_dot.xtern.h
c/math/nn/: conv_pool_static_fn.h  nn.h  nn.r.h  nn.xtern.h
c/math/nn/binary_cross_entropy/: binary_cross_entropy.c  binary_cross_entropy.h  binary_cross_entropy.r.h  binary_cross_entropy.xtern.h
c/math/nn/conv/: conv.c  conv.h  conv.r.h  conv.x.narray.h  conv.x.var.h
c/math/nn/mse/: mse.c  mse.h  mse.r.h  mse.xtern.h
c/math/nn/pool/: pool.c  pool.h  pool.r.h  pool.x.narray.h  pool.x.var.h
c/math/nn/pool/max/: max_pool.c  (+3 more)
c/math/nn/relu/: relu.c  relu.h  relu.r.h  relu.xtern.h
c/math/nn/sigmoid/: sigmoid.c  sigmoid.h  sigmoid.r.h  sigmoid.xtern.h
c/math/others/: reduce.c  reduce.r.h
c/math/others/user_elementary_fn/: user_elementary_fn.c  user_elementary_fn.def.h  user_elementary_fn.h  user_elementary_fn.r.h  user_elementary_fn.x.narray.h  user_elementary_fn.x.var.h  user_elementary_fn.xtern.h
c/misc/: misc.c  misc.h  slice.c  slice.h  slice.r.h
c/misc/slice/: slice.c  slice.h  slice.r.h  slice.x.narray.h  slice.x.var.h
c/operators/: Add.c  MatrixDot.c  Minus.c  Product.c  Qoutient.c
(+9 files in other folders)
